# contract-countdown

./: .gitignore  Dockerfile  README.md  _config.yml  _config_dev.yml  docker-compose.yml  emails.html  example.html  index.html  manage.py  pyproject.toml
_data/: uk_contracts_finder.csv
_includes/: contract-card.html  header.html
_sass/: _spacing-gutters.scss  _variables.scss  main.scss
conf/: env-example  httpd.conf  httpd.conf-example
data/: groups.json
procurement/: asgi.py  filters.py  forms.py  models.py  procurement_utils.py  settings.py  urls.py  views.py  wsgi.py
procurement/management/commands/: get_ungrouped_classifications.py  import_climate_representatives.py  import_councils.py  import_tenders.py
procurement/migrations/: 0001_initial.py  0002_award.py  0003_council_codes.py  0004_add_award_duration.py  0005_add_tender_classifications.py  0006_add_tender_dates.py  0007_increase_council_authority_code_length.py  0008_gss_code_not_unique.py  0009_add_council_nation_council_region.py  0010_create_climate_representatives.py
procurement/static/css/: _forms.scss  _home.scss  _search-input.scss  _variables.scss  awesomplete.scss  main.scss
procurement/static/js/: all.js
procurement/templates/procurement/: base.html  contact.html  contact_council.html  contact_preview.html  contact_representative.html  emails.html  (+7 more)
procurement/templatetags/: urlparams.py
procurement/tests/: test_councillor_contact.py  test_email_alerts.py  test_import_climate_representatives.py  test_import_tenders.py  test_models.py
script/: bootstrap
static/js/: all.js
(+18 files in other folders)
