[tool.poetry]
name = "procurement-prototype"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.5"
django-environ = "^0.9.0"
psycopg2 = "^2.9.3"
django-libsass = "^0.9"
django-bootstrap4 = "^22.1"
pandas = "^1.4.3"
openpyxl = "^3.0.10"
requests = "^2.28.1"
requests-cache = "^0.9.5"
django-filter = "^22.1"
django-debug-toolbar = "^3.5.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
